# kinuchat

./: .gitignore  BATTERY_OPTIMIZATION.md  CRITICAL_FIXES_APPLIED.md  DEPLOYMENT_GUIDE.md  MESHLINK_SPECIFICATION.md  MESHLINK_WHITEPAPER.md  PHASE_2_SUMMARY.md  PRE_DEPLOYMENT_CHECKLIST.md  README.md  READY_TO_DEPLOY.md  ROADMAP.md  SESSION_STATE.md  START_HERE.md  TESTING_GUIDE.md  TESTING_PLAN.md  analysis_options.yaml  claude.md  melos.yaml
.claude/context/: SPEC.md
apps/mobile/: APP_STORE_ASSETS.md  CLAUDE.md  IOS_TESTFLIGHT_SETUP.md  TEMPORARY_WORKAROUNDS.md  pubspec.yaml
apps/mobile/android/app/: build.gradle.kts
apps/mobile/ios/: ExportOptions.plist  Podfile
apps/mobile/ios/Runner/: Info.plist
apps/mobile/ios/Runner.xcodeproj/: project.pbxproj
apps/mobile/lib/: main.dart
apps/mobile/lib/core/config/: app_config.dart
apps/mobile/lib/core/providers/: auth_providers.dart  bridge_providers.dart  database_providers.dart  demo_providers.dart  donation_providers.dart  group_providers.dart  identity_providers.dart  location_providers.dart  matrix_providers.dart  mesh_providers.dart  notification_providers.dart  providers.dart  rally_providers.dart  repository_providers.dart  settings_provider.dart  storage_providers.dart  transport_providers.dart
apps/mobile/lib/data/repositories/: conversation_repository.dart  group_repository.dart  message_repository.dart  rally_repository.dart
apps/mobile/lib/data/services/: app_initialization_service.dart  bridge_mode_service.dart  donation_service.dart  flutter_secure_storage_impl.dart  kinu_relying_party.dart  matrix_service.dart  media_service.dart  mesh_background_service.dart  notification_service.dart  voice_recording_service.dart
apps/mobile/lib/presentation/screens/: splash_screen.dart
apps/mobile/test/: widget_test.dart
apps/mobile/test/e2e/: demo_data.json  demo_data_populator.dart  matrix_integration_test.dart  relay_server_test.dart  run_e2e_tests.sh  spec_compliance_test.dart  spec_reference.dart  test_utils.dart
docs/: PHASE_1_SUMMARY.md
server/auth/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  fly.toml  kinu_auth.db
server/auth/migrations/: 20240117_000001_create_accounts.sql
server/auth/src/: email.rs  main.rs  matrix.rs
server/auth/src/crypto/: argon2.rs  encryption.rs  jwt.rs  mod.rs  totp.rs
server/auth/src/db/: mod.rs
server/auth/src/models/: account.rs
server/auth/src/routes/: accounts.rs  devices.rs  mod.rs  passkey.rs  recovery.rs  totp.rs
server/dendrite/: .dockerignore  Dockerfile  dendrite.yaml  entrypoint.sh  fly.toml
server/relay/: Cargo.toml  Dockerfile  fly.toml
server/relay/src/: config.rs  main.rs
server/relay/src/models/: envelope.rs
server/relay/src/routes/: mod.rs  poll.rs  upload.rs  websocket.rs
server/relay/src/storage/: mod.rs  redis.rs
web/: package-lock.json  package.json
web/src/layouts/: Layout.astro
web/src/pages/: index.astro  privacy.astro  terms.astro  whitepaper.astro
web/src/styles/: global.css
(+49 files in other folders)
